added macos support